--- a/Webix_01/index.html
+++ b/Webix_01/index.html
@@ -1,43 +1,17 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Game</title>
-	<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" href="http://cdn.webix.com/edge/webix.css" type="text/css">
+	<script src="http://cdn.webix.com/edge/webix.js" type="text/javascript"></script>
 </head>
 
 <body>
-	<h1>Крестики-нолики</h1>
-	<div class="area-wrapper">
-		<div id="area">
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-		</div>
-	</div>
-
-	<div id="modal-result-wrapper">
-		<div id="overlay"></div>
-		<div id="modal-window">
-			<div id="content">content</div>
-			<div id="btn-close">Start New Game</div>
-		</div>
-	</div>
+	<script type="text/javascript" charset="utf-8">
 
 
 
-	<!-- Комментарий -->
-	<!--p>Первый абзац.</p>
-  <p>Второй абзац.</p-->
-
+	</script>
 	<script src="main.js"></script>
 </body>
 
