--- a/Webix_01/index.html
+++ b/Webix_01/index.html
@@ -7,12 +7,11 @@
 </head>
 
 <body>
-	<script type="text/javascript" charset="utf-8">
+	<!-- <script type="text/javascript" charset="utf-8">
 
+	</script> -->
+	<script type="text/javascript" charset="utf-8" src="main5.js"></script>
 
-
-	</script>
-	<script src="main.js"></script>
 </body>
 
 </html>
